# eitr

./: Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  supervisord.conf
.github/workflows/: docker-image.yml
foodfetcher/: manage.py
foodfetcher/foodfetcher/: asgi.py  settings.py  urls.py  wsgi.py
foodfetcher/foods/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
foodfetcher/foods/migrations/: 0001_initial.py
